Fix footer top-whitespace

--- a/css/layouts.css
+++ b/css/layouts.css
@@ -3023,7 +3023,7 @@ Portfolio layout Styles
 	padding:0px;
 	margin:0px;
 	float:left;
-	top:-150px;
+	top:-20px;
 	background-attachment: scroll;
 	background-position: top;
 	background: url(../images/background-1920x900.jpg) fixed top no-repeat;
